2007-04-04  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-load): updated

	* rails-ui.el: reduced the menu length

2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-load): updated

	* rails-controller-layout.el (rails-controller-layout:keymap):
	created menu group for current minor-mode

	* rails-model-layout.el (rails-model-layout:keymap): created menu
	group for current minor-mode

	* rails-core.el (rails-core:controller-file-by-model)
	(rails-core:mailer-file, rails-core:mailer-exist-p)
	(rails-core:migration-file-by-model)
	(rails-core:model-by-migration-filename)
	(rails-core:unit-test-exist-p, rails-core:fixture-exist-p)
	(rails-core:current-mailer): created

	* rails-model-layout.el (rails-model-layout:keymap): removed mode specific menu

	* rails-controller-layout.el (rails-controller-layout:keymap): removed mode specific menu

	* rails-compat.el (predictive-prog-mode): don't start inside strings

	* rails-core.el: using completion-posn-at-point-as-event instead custom function

	* rails-ui.el (rails-minor-mode-db-menu-bar-map): updated

	* rails-model-layout.el (rails-model-layout:keymap): created

	* rails-core.el (rails-core:buffer-file-match): allow passing nil

	* rails-controller-layout.el (rails-controller-layout:keymap): created

	* rails-cmd-proxy.el (rails-cmd-proxy:convert-buffer-from-remote): fixed compilation warning 

	* rails-ruby.el: added flymake support to on the fly syntax check in ruby-mode

	* rails-test.el (rails-test:error-regexp-alist): updated

2007-04-02  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-lib.el (merge-abbrev-tables): mark abbrev as system 

2007-04-01  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-snippets.el: updated snippets

	* rails-ui.el (rails-minor-mode-nav-menu-bar-map): created separate menu entry for "Navigate", "Database", "Tests"

	* rails-test.el (rails-test:error-regexp-alist): updated regexp to match errors
